--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.3.0",
     "bower": "~1.1.0"
+  },
+  "dependencies": {
+    "font-awesome": "^4.6.3"
   }
 }
